@@ -13,6 +13,9 @@ requires 'update';
 requires 'insert';
 
 Readonly::Scalar my $MQC_LIB_LIMIT => 50;
+Readonly::Scalar my $ACCEPTED_FINAL  => 'Accepted final';
+Readonly::Scalar my $REJECTED_FINAL  => 'Rejected final';
+Readonly::Scalar my $UNDECIDED_FINAL => 'Undecided final';
 
 Readonly::Hash my %DELEGATION_TO_MQC_OUTCOME => {
   'has_final_outcome' => 'is_final_outcome',
@@ -92,7 +95,7 @@ sub _create_historic {
        ->schema
        ->resultset($self->_rs_name('Hist'))
        ->create($self->data_for_historic);
-  return 1;
+  return;
 }
 
 sub find_valid_outcome {
@@ -117,58 +120,79 @@ sub find_valid_outcome {
 
 sub update_to_final_outcome {
   my ($self, $username) = @_;
+
   my $new_outcome;
   my $class = ref $self;
-  my $as_mqc_library = $class =~ /MqcLibraryOutcomeEnt\Z/smx;
+  my $is_mqc_library = $class =~ /Library/smx;
 
   if( $self->is_accepted ) {
-    $new_outcome = q[Accepted final];
+    $new_outcome = $ACCEPTED_FINAL;
   } elsif ( $self->is_rejected ) {
-    $new_outcome = q[Rejected final];
-  } elsif ( $as_mqc_library && $self->is_undecided ) {
-    $new_outcome = q[Undecided final];
+    $new_outcome = $REJECTED_FINAL;
+  } elsif ( $is_mqc_library && $self->is_undecided ) {
+    $new_outcome = $UNDECIDED_FINAL;
   } else {
-    my $tag_index = q[];
-    if ( $as_mqc_library ) {
-      $tag_index = ' tag_index ' . ( $self->tag_index ? $self->tag_index : q[undef] );
-    }
-
-    my $error_message = sprintf 'Unable to update unexpected outcome to final for id_run %i position %i%s.',
-                  $self->id_run,
-                  $self->position,
-                  $tag_index;
-    croak $error_message;
+    croak sprintf 'Unable to update unexpected outcome to final for id_run %i position %i%s.',
+      $self->id_run,
+      $self->position,
+      $is_mqc_library ? ' tag_index ' . ( $self->tag_index ? $self->tag_index : q[undef] ) : q[];
   }
-  return $self->update_outcome($new_outcome, $username);
+
+  return $self->update_nonfinal_outcome($new_outcome, $username);
+}
+
+sub toggle_final_outcome {
+  my ($self, $modified_by, $username) = @_;
+
+  if (!$self->in_storage) {
+    croak 'Record is not stored in the database yet';
+  }
+  if (!$self->has_final_outcome) {
+    croak 'Cannot toggle non-final outcome ' . $self->mqc_outcome->short_desc;
+  }
+  if ($self->is_undecided) {
+    croak 'Cannot toggle undecided final outcome';
+  }
+
+  my $new_outcome = $self->is_accepted ? $REJECTED_FINAL : $ACCEPTED_FINAL;
+  return $self->update_outcome($new_outcome, $modified_by, $username);
+}
+
+sub update_nonfinal_outcome {
+  my ($self, $outcome, $modified_by, $username) = @_;
+  if ($self->in_storage && $self->has_final_outcome) {
+    croak('Outcome is already final, cannot update');
+  }
+  return $self->update_outcome($outcome, $modified_by, $username);
 }
 
 sub update_outcome {
-  my ($self, $outcome, $username) = @_;
+  my ($self, $outcome, $modified_by, $username) = @_;
 
   if( !defined $outcome ) {
     croak q[Mandatory parameter 'outcome' missing in call];
   }
-  $self->validate_username($username);
+
+  $username ||= $modified_by;
+  $self->validate_username($modified_by);
   my $outcome_dict_obj = $self->find_valid_outcome($outcome);
   my $outcome_id = $outcome_dict_obj->pk_value;
 
+  my $values = {};
+  $values->{'id_mqc_outcome'} = $outcome_id;
+  $values->{'username'}       = $username;
+  $values->{'modified_by'}    = $modified_by;
+
   if ($self->in_storage) {
-    if($self->has_final_outcome) {
-      croak('Outcome is already final but trying to transit to ' .
-            $outcome_dict_obj->short_desc);
-    }
-    my $values = {};
-    $values->{'id_mqc_outcome'} = $outcome_id;
-    $values->{'username'}       = $username;
-    $values->{'modified_by'}    = $username;
     $self->update($values);
   } else {
-    $self->id_mqc_outcome($outcome_id);
-    $self->username($username);
-    $self->modified_by($username);
+    while ( my ($column, $value) = each %{$values} ) {
+      $self->$column($value);
+    }
     $self->insert();
   }
-  return 1;
+
+  return;
 }
 
 no Moose::Role;
@@ -193,9 +217,24 @@ __END__
 
 =head1 SUBROUTINES/METHODS
 
+=head2 update
+
+  The default method is extended to create a relevant historic record and set
+  correct local time.
+
+=head2 insert
+
+  The default method is extended to create a relevant historic record and set
+  correct local time.
+
 =head2 get_time_now
 
+  Returns a localised DateTime object representing time now.
+
 =head2 mqc_lib_limit
+
+  Returns a maximum number of plexes in a lane that can be subject to
+  library manula qc.
 
 =head2 data_for_historic
 
@@ -230,28 +269,46 @@ __END__
   raises an error.
 
   my $dict_obj = $obj->find_valid_outcome('Accepted preeliminary');
-  
-  or
-  
   my $dict_obj = $obj->find_valid_outcome(1);
 
 =head2 update_to_final_outcome
 
   Checks the current outcome for this entity and tries to define a corresponding
-  final outcome. If there is one, it will delegate the update to update_outcome
+  final outcome. If there is one, it will delegate the update to update_nonfinal_outcome
   using the final outcome as new outcome for the entity.
 
   Needs the username of who is requesting the change.
 
   $obj->update_to_final_outcome($username);
 
+=head2 update_nonfinal_outcome
+
+  Updates the outcome of the entity with values provided. Stores a new row
+  if this entity was not yet stored in database.
+
+  If the outcome current outcome of the object is final and it is already
+  stored in the database, an error is raised.
+
+  Recommended to be used by the SeqQC application,
+
+  $obj->update_nonfinal_outcome($outcome, $username);
+  $obj->update_nonfinal_outcome($outcome, $username, $rt_ticket);
+
 =head2 update_outcome
 
-  Updates the outcome of the entity with values provided. Will store a new row
+  Updates the outcome of the entity with values provided. Stores a new row
   if this entity was not yet stored in database.
 
   $obj->update_outcome($outcome, $username);
+  $obj->update_outcome($outcome, $username, $rt_ticket);
 
+=head2 toggle_final_outcome
+
+  Updates the final accepted or rejected outcome to its opposite final outcome,
+  i.e. accepted is changed to rejected and rejected to accepted.
+
+  $obj->toggle_final_outcome($username);
+  $obj->toggle_final_outcome($username, $rt_ticket);
 
 =head1 DIAGNOSTICS
 
