@@ -1,0 +1,70 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+use Carp;
+
+use npg_warehouse::Schema;
+use npg_qc::Schema;
+
+################################################################
+#
+# Script to transfer old Sequencescape lane level manual qc
+# outcomes to the npg_qc database.
+#
+# The script does not change outcomes already available in
+# the npg_qc database. It reports the values in the npg_qc
+# database that do not match Sequencescape values.
+#
+# The 'reported' field is set to the current time.
+# The 'modified_by' field is set to the username of the user
+# who runs the script.
+# The 'username' field is set to RT#493757 under which the work
+# was performed.
+#
+
+my $rt_ticket = 'RT#493757';
+my $user = $ENV{'USER'} || die 'Cannot get the user from env';
+
+my $qc_mqc_rs = npg_qc::Schema->connect()->resultset('MqcOutcomeEnt')
+                ->search({}, {prefetch => 'mqc_outcome'});
+my $qc_mqc = {};
+while (my $mqc_row = $qc_mqc_rs->next) {
+  if ($mqc_row->has_final_outcome) {
+    $qc_mqc->{$mqc_row->id_run}->{$mqc_row->position} = $mqc_row->is_accepted ? 1 : 0;
+  }
+}
+
+my $time_now = $qc_mqc_rs->result_class->get_time_now();
+
+my $wh_rs = npg_warehouse::Schema->connect()->resultset('NpgInformation')
+           ->search({}, {'order_by' => [qw/id_run position/]});
+
+while (my $wh_row = $wh_rs->next) {
+
+  my $sscape_outcome = $wh_row->manual_qc;
+  if (!defined $sscape_outcome) {
+    next;
+  }
+
+  my $id_run   = $wh_row->id_run;
+  my $position = $wh_row->position;
+  if ( exists $qc_mqc->{$id_run}->{$position} ) {
+    if ($sscape_outcome != $qc_mqc->{$id_run}->{$position}) {
+      warn sprintf 'Mismatch for run %i, position %i: wh %i, qc %i %s',
+        $id_run, $position, $sscape_outcome, $qc_mqc->{$id_run}->{$position}, "\n";
+    }
+    next;
+  }
+
+  my $outcome = $sscape_outcome ? q[Accepted final] : q[Rejected final];
+  warn sprintf "inserting $outcome for $id_run : $position \n"
+  #$qc_mqc_rs->result_class->new({
+  #  'reported'       => $time_now,
+  #  'id_run'         => $id_run,
+  #  'position'       => $position,
+  #})->update_outcome($outcome, $user, $rt_ticket);  
+}
+
+
+1;
