@@ -1,10 +1,9 @@
 use strict;
 use warnings;
-use Test::More tests => 5;
+use Test::More tests => 8;
 use Test::Exception;
 use Moose::Meta::Class;
 use npg_testing::db;
-use DateTime;
 
 my $table = 'MqcLibraryOutcomeEnt';
 my $hist_table = 'MqcLibraryOutcomeHist';
@@ -152,7 +151,8 @@ subtest 'Update to final' => sub {
   my $object = $schema->resultset($table)->create($values);
   ok ( $object->is_accepted && !$object->has_final_outcome,
          'Entity has accepted not final.');
-  ok ( $object->update_to_final_outcome($username), 'Can update as final outcome' );
+  lives_ok { $object->update_to_final_outcome($username) }
+    'Can update as final outcome';
   ok ( $object->is_accepted && $object->has_final_outcome,
          'Entity has accepted final.');
   
@@ -161,7 +161,8 @@ subtest 'Update to final' => sub {
   $object = $schema->resultset($table)->create($values);
     ok ( $object->is_rejected && !$object->has_final_outcome,
          'Entity has rejected not final.');
-  ok ( $object->update_to_final_outcome($username), 'Can update as final outcome' );
+  lives_ok { $object->update_to_final_outcome($username) }
+   'Can update as final outcome';
   ok ( $object->is_rejected && $object->has_final_outcome, 
          'Entity has rejected final.');
   
@@ -170,9 +171,135 @@ subtest 'Update to final' => sub {
   $object = $schema->resultset($table)->create($values);
   ok ( $object->is_undecided,
          'Entity has undecided.');
-  ok ( $object->update_to_final_outcome($username), 'Can update as final outcome' );
+  lives_ok { $object->update_to_final_outcome($username) }
+    'Can update as final outcome';
   ok ( $object->is_undecided && $object->has_final_outcome, 
          'Entity has undecided final.');
+};
+
+subtest q[update on a new result] => sub {
+  plan tests => 47;
+  
+  my $rs = $schema->resultset($table);
+  my $hrs = $schema->resultset($hist_table);
+
+  my $args = {'id_run' => 444, 'position' => 1, 'tag_index' => 2};
+  my $new_row = $rs->new_result($args);
+  my $outcome = 'Accepted preliminary';
+  lives_ok { $new_row->update_outcome($outcome, 'cat') }
+    'preliminary outcome saved';
+  ok ($new_row->in_storage, 'new object has been saved');
+
+  my $hist_rs = $hrs->search($args);
+  is ($hist_rs->count, 1, 'one historic is created');
+  my $hist_new_row = $hist_rs->next();
+
+  for my $row (($new_row, $hist_new_row)) {
+    is ($new_row->mqc_outcome->short_desc(), $outcome, 'correct prelim. outcome');
+    is ($new_row->username, 'cat', 'username');
+    is ($new_row->modified_by, 'cat', 'modified_by');
+    ok ($new_row->last_modified, 'timestamp is set');
+    isa_ok ($new_row->last_modified, 'DateTime');
+    ok (!$new_row->has_final_outcome, 'not final outcome');
+    ok ($new_row->is_accepted, 'is accepted');
+    ok (!$new_row->is_final_accepted, 'not final accepted');
+  } 
+  
+  $outcome = 'Accepted final';
+ 
+  $new_row = $rs->new_result($args);
+  throws_ok { $new_row->update_nonfinal_outcome($outcome, 'dog', 'cat') }
+    qr /columns id_run, position, tag_index are not unique/,
+    'error creating a record for existing entity';
+
+  $args->{'position'} = 2;
+  $new_row = $rs->new_result($args);
+  lives_ok { $new_row->update_nonfinal_outcome($outcome, 'dog', 'cat') }
+    'final outcome saved';
+  ok ($new_row->in_storage, 'new object has been saved');
+
+  $hist_rs = $hrs->search($args);
+  is ($hist_rs->count, 1, 'one historic is created');
+  $hist_new_row = $hist_rs->next();
+
+  my $new_row_via_search = $rs->search($args)->next;
+
+  for my $row (($new_row, $new_row_via_search, $hist_new_row)) {
+    is ($new_row->mqc_outcome->short_desc(), $outcome, 'correct prelim. outcome');
+    is ($new_row->username, 'cat', 'username');
+    is ($new_row->modified_by, 'dog', 'modified_by');
+    ok ($new_row->last_modified, 'timestamp is set');
+    isa_ok ($new_row->last_modified, 'DateTime');
+    ok ($new_row->has_final_outcome, 'is final outcome');
+    ok ($new_row->is_accepted, 'is accepted');
+    ok ($new_row->is_final_accepted, 'is final accepted');
+  }
+
+  $new_row->delete();
+};
+
+subtest q[update final outcome] => sub {
+  plan tests => 6;
+
+  my $rs = $schema->resultset($table);
+
+  my $args = {'id_run' => 444, 'position' => 3, tag_index => 3};
+  my $new_row = $rs->new_result($args);
+  my $old_outcome = 'Accepted final';
+  lives_ok { $new_row->update_outcome($old_outcome, 'cat') }
+    'final outcome saved';
+  ok ($new_row->in_storage, 'new object has been saved');
+
+  my $outcome = 'Rejected final';
+  throws_ok { $new_row->update_nonfinal_outcome($outcome, 'cat') }
+    qr/Outcome is already final, cannot update/,
+    'cannot update final outcome';
+  is($new_row->mqc_outcome->short_desc, $old_outcome, 'old outcome');
+
+  lives_ok { $new_row->update_outcome($outcome, 'cat') }
+    'can update final outcome';
+  is($new_row->mqc_outcome->short_desc, $outcome, 'new outcome');
+
+  $new_row->delete();
+};
+
+subtest q[toggle final outcome] => sub {
+  plan tests => 11;
+
+  my $rs = $schema->resultset($table);
+
+  my $args = {'id_run' => 444, 'position' => 3, tag_index => 4};
+  my $new_row = $rs->new_result($args);
+
+  throws_ok { $new_row->toggle_final_outcome('cat', 'dog') }
+    qr/Record is not stored in the database yet/,
+    'cannot toggle a new object';
+  lives_ok { $new_row->update_outcome('Accepted preliminary', 'cat') }
+    'prelim outcome saved';
+  throws_ok { $new_row->toggle_final_outcome('cat', 'dog') }
+    qr/Cannot toggle non-final outcome Accepted preliminary/,
+    'cannot toggle a non-final outcome';
+  lives_ok { $new_row->update_outcome('Undecided final', 'cat') }
+    'undecided final outcome saved';
+  throws_ok { $new_row->toggle_final_outcome('cat', 'dog') }
+    qr/Cannot toggle undecided final outcome/,
+    'cannot toggle an undecided outcome';
+
+  my $old_outcome = 'Accepted final';
+  lives_ok { $new_row->update_outcome($old_outcome, 'cat') }
+    'final outcome saved';
+  is($new_row->mqc_outcome->short_desc, $old_outcome, 'final outcome is set');
+
+  my $outcome = 'Rejected final';
+  lives_ok { $new_row->toggle_final_outcome('cat', 'dog') }
+    'can toggle final outcome';
+  is($new_row->mqc_outcome->short_desc, $outcome, 'new outcome');
+  
+  lives_ok { $new_row->toggle_final_outcome('cat', 'dog') }
+    'can toggle final outcome once more';
+  is($new_row->mqc_outcome->short_desc, $old_outcome, 'old outcome again');
+
+  $new_row->delete();
 };
 
 1;
